# coinbase-exchange

./: coinbase-exchange.cabal  stack.yaml
src/: Main.hs
src/Data/: Coinbase.hs  Configuration.hs  Json.hs  Types.hs
src/Network/: Auth.hs
src/Network/Api/: Coinbase.hs
src/Network/HTTP/: Action.hs  Api.hs  Auth.hs
src/Network/WebSocket/: Connection.hs
